[package]
name = "lunar_calendar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ganzhiwuxin = { git = "https://github.com/wlhyl/ganzhiwuxin.git", branch = "rust" }
rust-swe = { git = "https://github.com/wlhyl/rust-swe.git" }

[dev-dependencies]
dotenv = "0.15.0"
